--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "./tailwind.css";
+@import "./base.css";
+
+a:hover {
+  @apply underline;
+}
